# cotale

./: .env.example  .python-version  README.md  cotale.code-workspace  docker-compose.yml  pyrightconfig.json  scriptforge.code-workspace  start-dev.sh  stop-dev.sh
cotale-backend/: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  alembic.ini  entrypoint.sh  env.example  main.py  pyproject.toml  pyrightconfig.json  run.py
cotale-backend/alembic/: env.py
cotale-backend/alembic/versions/: 34fc5cc6fd14_initial_migration_with_user_and_.py  476bd3ca1d51_update_models.py  861d8cf3d503_rename_metadata_to_extra_metadata_in_.py
cotale-backend/app/: __init__.py  main.py
cotale-backend/app/api/: deps.py
cotale-backend/app/api/v1/: auth.py  documents.py  websocket.py
cotale-backend/app/core/: config.py  security.py
cotale-backend/app/db/: __init__.py  database.py
cotale-backend/app/db/repositories/: __init__.py  document_repository.py  user_repository.py
cotale-backend/app/models/: document.py  user.py
cotale-backend/app/schemas/: __init__.py  document.py  user.py
cotale-backend/app/services/: ai_service.py  auth_service.py  document_service.py  websocket_service.py
cotale-frontend/: .dockerignore  .env.example  Dockerfile  jest.config.js  next.config.ts  package.json  pnpm-lock.yaml
cotale-frontend/__test__/: setup.ts
cotale-frontend/app/: globals.css  layout.tsx  page.tsx
cotale-frontend/components/: MonacoEditor.tsx
cotale-frontend/hooks/: useAuth.ts
scripts/: docker-test.sh  logs.sh  update-schema.sh
(+24 files in other folders)
